Full support for DAM API except for integration with Portfolio
Added support for image content and image references within the image
record.  Also, fixed a few bugs reported through CS QA testing.